clusters/k3d-test/default/whoami/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami
spec:
  ports:
    - port: 80
  selector:
    app: whoami
